fix bad wrapping in title

--- a/h/sass/home.scss
+++ b/h/sass/home.scss
@@ -1,9 +1,6 @@
 article#home {
   section.title {
-    h1, h2 {
-      margin-bottom: 0;
-      white-space: nowrap;
-    }
+    h1, h2 { margin-bottom: 0; }
   }
 
   section:nth-of-type(2) {
